; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/gpio/extr_gpiopower.c_gpiopower_assert.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/gpio/extr_gpiopower.c_gpiopower_assert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpiopower_softc = type { i32, i32 }

@RB_HALT = common dso_local global i32 0, align 4
@RB_POWEROFF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"powering system off\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"resetting system\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @gpiopower_assert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpiopower_assert(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpiopower_softc*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.gpiopower_softc* @device_get_softc(i32 %7)
  store %struct.gpiopower_softc* %8, %struct.gpiopower_softc** %5, align 8
  %9 = load %struct.gpiopower_softc*, %struct.gpiopower_softc** %5, align 8
  %10 = getelementptr inbounds %struct.gpiopower_softc, %struct.gpiopower_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.gpiopower_softc*, %struct.gpiopower_softc** %5, align 8
  %15 = getelementptr inbounds %struct.gpiopower_softc, %struct.gpiopower_softc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %4, align 4
  %18 = and i32 %16, %17
  br label %25

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @RB_HALT, align 4
  %22 = and i32 %20, %21
  %23 = icmp eq i32 %22, 0
  %24 = zext i1 %23 to i32
  br label %25

25:                                               ; preds = %19, %13
  %26 = phi i32 [ %18, %13 ], [ %24, %19 ]
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %25
  br label %54

30:                                               ; preds = %25
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @RB_POWEROFF, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %30
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @device_printf(i32 %36, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %48

38:                                               ; preds = %30
  %39 = load i32, i32* %4, align 4
  %40 = load i32, i32* @RB_HALT, align 4
  %41 = and i32 %39, %40
  %42 = icmp eq i32 %41, 0
  br i1 %42, label %43, label %46

43:                                               ; preds = %38
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @device_printf(i32 %44, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  br label %47

46:                                               ; preds = %38
  br label %54

47:                                               ; preds = %43
  br label %48

48:                                               ; preds = %47, %35
  %49 = load %struct.gpiopower_softc*, %struct.gpiopower_softc** %5, align 8
  %50 = getelementptr inbounds %struct.gpiopower_softc, %struct.gpiopower_softc* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @gpio_pin_set_active(i32 %51, i32 1)
  %53 = call i32 @DELAY(i32 10000000)
  br label %54

54:                                               ; preds = %48, %46, %29
  ret void
}

declare dso_local %struct.gpiopower_softc* @device_get_softc(i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1

declare dso_local i32 @gpio_pin_set_active(i32, i32) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
